Make java respect container memory limits